# pose_prediction_hallway_passing

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  visualize_help.cpp
calibration/: CMakeLists.txt  kinect_video_display.cpp  kinect_video_display.h  record_calibration_data.cpp
detection/: CMakeCache.txt  Makefile  cmake_install.cmake
detection/joint_detection/: CMakeLists.txt  a.out  curve_right.txt  joint_data.txt  joint_data_left  joint_detection.sln  joint_detection.vcxproj  main.cpp  packages.config  straight_test.txt
final_outputs/01_5_4_f/: 01_5_4_lo.txt  01_5_4_log.txt  01_5_4_ro.txt  01_5_4_rog.txt  01_5_4_s.txt
final_outputs/02_5_9_m/: 00_5_9_log.txt  00_5_9_s.txt  02_5_9_lo.txt  02_5_9_ro.txt  02_5_9_rog.txt
final_outputs/03_5_5_f/: 03_5_5_f_lo.txt  03_5_5_f_log.txt  03_5_5_f_ro.txt  03_5_5_f_rog.txt  03_5_5_f_s.txt
final_outputs/04_5_4_f/: 04_5_4_f_lo.txt  04_5_4_f_log.txt  04_5_4_f_ro.txt  04_5_4_f_rog.txt  04_5_4_f_s.txt
final_outputs/05_5_11_m/: 05_5_11_m_lo.txt  05_5_11_m_log.txt  05_5_11_m_ro.txt  05_5_11_m_rog.txt  05_5_11_m_s.txt
final_outputs/06_5_9_m/: 06_5_9_m_lo.txt  06_5_9_m_log.txt  06_5_9_m_rog.txt  06_5_9_m_s.txt
final_outputs/07_6_4_m/: 07_6_4_m_log.txt  07_6_4_m_ro.txt  07_6_4_m_rog.txt  07_6_4_m_s.txt  left  leftobs  right  rightobs  straight
final_outputs/08_6_0_m/: 08_6_0_m_lo.txt  08_6_0_m_log.txt  (+8 more)
homography_trial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
joint_detection/: joint_data.txt  joint_detection.filters  main.cpp  prog
joint_visualization/: CMakeLists.txt
outputs/: joint_detection_100_ananya_straight.txt  joint_detection_output_10.txt  joint_detection_output_100_jacob_3.txt  joint_detection_output_100_jacob_4.txt  joint_detection_output_100_jacob_5.txt  joint_detection_output_100_jacob_zig.txt  joint_detection_output_100_jacob_zig_2.txt  joint_detection_output_100_navya_straight.txt  joint_detection_output_100_navya_zig.txt  joint_detection_output_100_tvisha_straight.txt  joint_detection_output_100_tvisha_zig_zag.txt  joint_detection_output_150_jacob_zig.txt  joint_detection_output_200.txt  joint_detection_output_800.txt
postprocess/: helper.c  helper.txt
transformer/: tutorial.py
visualization/: 1000-straight.txt  CMakeLists.txt  curve-1000-left.txt  output
visualization/joint_visualizations/: CMakeLists.txt  curve-1000-right-final.txt  curve-1000-right.txt  curve-rightfinal.txt  final_log_test.txt  final_rog_predict.txt  final_straight_predict.txt  final_straight_test.txt  helper  helper.c  left-predict.txt  right-predict.txt  straight-predict.txt  visualize  visualize.c  visualize.cpp
visualization/joint_visualizations/midterm-outputs/: left-predict.txt  straight-predict.txt
(+2874 files in other folders)
